Add: Metal repo get of class and class list.
